[package]
name = "r3e-source-list-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = { version = "=0.14.1", default-features = false, features = ["rlp", "codec", "num-traits"] }
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
jsonpath-rust = "0.3.0"